main/default/objects/SPC_Pricing__c/SPC_Pricing__c.object-meta.xml
<CustomObject>
    <label>SPC Pricing</label>
    <nameField>
        <displayFormat>SPCPrice-{0000}</displayFormat>
        <label>SPC Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPC Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>