main/default/objects/SPC_Pricing__c/fields/Access_Technology_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_Technology_Name__c</fullName>
    <label>Access Technology Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>