main/default/objects/SPC_Pricing__c/fields/Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth__c</fullName>
    <label>Bandwidth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>