main/default/objects/SPC_Pricing__c/fields/Bandwidth_Text__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_Text__c</fullName>
    <description>Workflow populates this field from the decimal bandwidth value.</description>
    <label>Bandwidth Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>