main/default/objects/SPC_Pricing__c/fields/Component_Group__c.field-meta.xml
<CustomField>
    <fullName>Component_Group__c</fullName>
    <label>Component Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>