main/default/objects/SPC_Pricing__c/fields/Dependent_Sales_Product_Components__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Sales_Product_Components__c</fullName>
    <label>Dependent Sales Product Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>