main/default/objects/SPC_Pricing__c/fields/Is_Non_Discountable__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Discountable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non Discountable</label>
    <type>Checkbox</type>
</CustomField>