main/default/objects/SPC_Pricing__c/fields/Is_Per_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Per_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Account</label>
    <type>Checkbox</type>
</CustomField>