main/default/objects/SPC_Pricing__c/fields/Is_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Quote_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Quote Price</label>
    <type>Checkbox</type>
</CustomField>