main/default/objects/SPC_Pricing__c/fields/Is_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Is_Toll_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Toll Free</label>
    <type>Checkbox</type>
</CustomField>