main/default/objects/SPC_Pricing__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <length>50</length>
    <type>Text</type>
</CustomField>