main/default/objects/SPC_Pricing__c/fields/Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>Max_Qty__c</fullName>
    <label>Max Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>