main/default/objects/SPC_Pricing__c/fields/NRR_Floor__c.field-meta.xml
<CustomField>
    <fullName>NRR_Floor__c</fullName>
    <label>NRR Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>