main/default/objects/SPC_Pricing__c/fields/Price_ID__c.field-meta.xml
<CustomField>
    <fullName>Price_ID__c</fullName>
    <description>This is the unique identifier created for each pricing row.</description>
    <externalId>true</externalId>
    <label>Price ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>