main/default/objects/SPC_Pricing__c/fields/Pricing_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Name__c</fullName>
    <description>Use this to append/overwrite the description of the pricing row</description>
    <label>Pricing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>