main/default/objects/SPC_Pricing__c/fields/Related_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Related_Pricing__c</fullName>
    <label>Related Pricing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>