main/default/objects/SPC_Pricing__c/fields/Sales_Product_Component_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_Component_ID__c</fullName>
    <label>Sales Product Component ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>