main/default/objects/SPC_Pricing__c/fields/Sales_Selection_Rule__c.field-meta.xml
<CustomField>
    <fullName>Sales_Selection_Rule__c</fullName>
    <label>Sales Selection Rule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>