main/default/objects/SPC_Pricing__c/fields/SPC_Component__c.field-meta.xml
<CustomField>
    <fullName>SPC_Component__c</fullName>
    <label>SPC Component</label>
    <referenceTo>SPC_Component__c</referenceTo>
    <relationshipLabel>SPC Pricing</relationshipLabel>
    <relationshipName>SPC_Pricing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>