main/default/objects/SPC_Pricing__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Component_Name__c</field>
        <operation>contains</operation>
        <value>BGP</value>
    </filters>
    <label>BGP Routing</label>
</ListView>