main/default/objects/SPC_Pricing__c/listViews/Business_Connect_Bundle1.listView-meta.xml
<ListView>
    <fullName>Business_Connect_Bundle1</fullName>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <columns>Max_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>Security Edition</value>
    </filters>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Business Connect Bundle Security Edition</label>
</ListView>