main/default/objects/SPC_Pricing__c/listViews/Cloud_Connect.listView-meta.xml
<ListView>
    <fullName>Cloud_Connect</fullName>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <columns>Max_Qty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>Cloud Connect</value>
    </filters>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Cloud Connect</label>
</ListView>