main/default/objects/SPC_Pricing__c/listViews/Collaboration_AND_Messaging.listView-meta.xml
<ListView>
    <fullName>Collaboration_AND_Messaging</fullName>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Component_ID__c</columns>
    <columns>Sales_Product_Component_ID__c</columns>
    <columns>Max_Qty__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>NRR_Floor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>Collaboration</value>
    </filters>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Collaboration &amp; Messaging</label>
</ListView>