main/default/objects/SPC_Pricing__c/listViews/Colocation_Services.listView-meta.xml
<ListView>
    <fullName>Colocation_Services</fullName>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Group__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>NRR_Floor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>equals</operation>
        <value>Colocation Services</value>
    </filters>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Colocation Services</label>
</ListView>