main/default/objects/SPC_Pricing__c/listViews/Dedicated_Internet1.listView-meta.xml
<ListView>
    <fullName>Dedicated_Internet1</fullName>
    <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>Dedicated Internet,Ethernet</value>
    </filters>
    <filters>
        <field>Component_Name__c</field>
        <operation>contains</operation>
        <value>gbps</value>
    </filters>
    <filters>
        <field>Component_Name__c</field>
        <operation>contains</operation>
        <value>1000</value>
    </filters>
    <label>1-10 Gbps Access Components</label>
</ListView>