main/default/objects/SPC_Pricing__c/listViews/EEL.listView-meta.xml
<ListView>
    <fullName>EEL</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>NRR_Floor__c</columns>
    <columns>Bandwidth__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Component_Name__c</field>
        <operation>contains</operation>
        <value>EEL</value>
    </filters>
    <label>EEL</label>
</ListView>