main/default/objects/SPC_Pricing__c/listViews/Ethernet_Extended_Access_200Components.listView-meta.xml
<ListView>
    <fullName>Ethernet_Extended_Access_200Components</fullName>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Component_Name__c</field>
        <operation>contains</operation>
        <value>Ethernet Extended Access - 200 Mbps</value>
    </filters>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>voice,sip,uc</value>
    </filters>
    <label>Ethernet Extended Access - 200Components</label>
</ListView>