main/default/objects/SPC_Pricing__c/listViews/Ethernet_Services.listView-meta.xml
<ListView>
    <fullName>Ethernet_Services</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>E-LAN</value>
    </filters>
    <filters>
        <field>Component_Name__c</field>
        <operation>contains</operation>
        <value>CIR -</value>
    </filters>
    <filters>
        <field>Market__c</field>
        <operation>contains</operation>
        <value>Oregon</value>
    </filters>
    <label>Ethernet Services</label>
</ListView>