main/default/objects/SPC_Pricing__c/listViews/Hosted_EnterprisePBX_SIPSolution_Bundle.listView-meta.xml
<ListView>
    <fullName>Hosted_EnterprisePBX_SIPSolution_Bundle</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>Hosted Enterprise</value>
    </filters>
    <label>Hosted EnterprisePBX SIPSolution Bundle</label>
</ListView>