main/default/objects/SPC_Pricing__c/listViews/Hosted_PBX.listView-meta.xml
<ListView>
    <fullName>Hosted_PBX</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Sales_Product_Name__c</columns>
    <columns>Component_Name__c</columns>
    <columns>Market__c</columns>
    <columns>Term__c</columns>
    <columns>MRR__c</columns>
    <columns>MRR_Floor__c</columns>
    <columns>NRR__c</columns>
    <columns>Is_Quote_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Expired__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sales_Product_Name__c</field>
        <operation>contains</operation>
        <value>Hosted PBX</value>
    </filters>
    <filters>
        <field>Component_Name__c</field>
        <operation>contains</operation>
        <value>5330</value>
    </filters>
    <label>Hosted PBX</label>
</ListView>